--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
     "require-dev": {
         "facade/ignition": "^1.16.4",
         "fakerphp/faker": "^1.9.1",
+        "laravel/ui": "^1.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "oscarafdev/migrations-generator": "^2.0",
         "phpunit/phpunit": "^8.5.8|^9.3.3"
     },
     "config": {
