--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,7 @@
     </IfModule>
 
     RewriteEngine On
-	RewriteBase "/laravel-test/"
+	RewriteBase "/laravel_thread_bbs/"
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
