不要なファイルを削除

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 .idea/sshConfigs.xml
 .idea/webServers.xml
 .idea/commandlinetools/Laravel_2021_06_17_3_00.xml
+.idea/commandlinetools/Laravel_2021_06_17_14_56.xml
