--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 .idea/webServers.xml
 .idea/commandlinetools/Laravel_2021_06_17_3_00.xml
 .idea/commandlinetools/Laravel_2021_06_17_14_56.xml
+.idea/cake_config_setting_v0_6.xml
+.idea/laravel-plugin.xml
+.idea/symfony2.xml
